--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learning Vue</title>
   <script src="https://unpkg.com/vue@3.0.2"></script>
+  <style>
+    .box {
+      padding: 100px 0;
+      width: 400px;
+      text-align: center;
+      background: #ddd;
+      margin: 20px;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
   <h1>Hello, Vue :)</h1>
+
+  <div id="app">
+    <p>{{ title }} - {{ author }} - {{ age }}</p>
+
+    <button @click="toggleShowBooks">
+      <span v-if="showBooks">Hide Books</span>
+      <span v-else>Show Books</span>
+    </button>
+
+    <br>
+    <!-- mouse events -->
+    <div class="box" @mouseover="">mouseover (enter)</div>
+    <div class="box">mouseleave</div>
+    <div class="box">double click</div>
+    <div class="box"></div>
+  </div>
 
   <script src="app.js"></script>
 </body>
