--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <h1>Hello, Vue :)</h1>
 
   <div id="app">
-    <p>{{ title }} - {{ author }} - {{ age }}</p>
+    <div v-if="showBooks">
+      <p>{{ title }} - {{ author }} - {{ age }}</p>
+    </div>
 
     <button @click="toggleShowBooks">
       <span v-if="showBooks">Hide Books</span>
